--- a/main.html
+++ b/main.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+	<h3 id="url">gfg</h3>
+    <form method="get">
+      Name:<br>
+      <input type="text" name="name" id="name" />
+      Graduation year:<br>
+      <input type="number" name="year" id="year" />
+      <button type="submit" id="button">Submit</button>
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
